--- a/CoreAssessment-frontend/src/index.css
+++ b/CoreAssessment-frontend/src/index.css
@@ -12,9 +12,18 @@
 
 html,body{
   font-family: 'Prompt', sans-serif !important;
+  height: 100%;
   /* margin: 0px; */
 
   
+}
+
+#root{
+  height: 100%;
+}
+
+.css-baqms3{
+  height: 100%;
 }
 
 /* table, th, td {
@@ -52,4 +61,9 @@ table.tbRadioGroup td:last-child {
 .responesiveDiv,
 .responesiveDiv>div{
   height: 100%;
+}
+
+.css-1p6iztw {
+  margin-top: 10px !important;
+  /* overflow: unset !important;  */
 }
