--- a/CoreAssessment-frontend/src/index.css
+++ b/CoreAssessment-frontend/src/index.css
@@ -22,9 +22,9 @@ html,body{
   height: 100%;
 }
 
-.css-baqms3{
+/* .css-baqms3{
   height: 100%;
-}
+} */
 
 /* table, th, td {
   border: 1px solid black;
